# fasulye

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE.txt  README.md
Core/: CMakeLists.txt
Core/Animation/: CMakeLists.txt
Core/Base/: CMakeLists.txt
Core/Base/include/: FScene.h  FUI.h
Core/Base/src/: FScene.cpp  FUI.cpp
Core/Manager/: CMakeLists.txt
Core/Manager/include/: FCanvas.h  FInputManager.h
Core/Manager/src/: FCamera.cpp  FCanvas.cpp  FSceneManager.cpp
Core/include/: FGame.h
Core/src/: FGame.cpp  utils.cpp
Game/: CMakeLists.txt
Game/Player/: CMakeLists.txt
Game/Player/include/: FAmmo.h  FGun.h  FPlayer.h
Game/Player/src/: FAmmo.cpp  FGun.cpp  FPlayer.cpp
Game/Scenes/: CMakeLists.txt
Game/Scenes/include/: FMainMenu.h  FTestWorld.h
Game/Scenes/src/: FMainMenu.cpp  FTestWorld.cpp
Game/include/: FItem.h
Global/: CMakeLists.txt
Global/include/: FUtils.h
Global/src/: FUtils.cpp
include/: FAmmo.h  FAnimation.h  FAnimationClip.h  FCamera.h  FCanvas.h  FGame.h  FGrid.h  FGun.h  FInputManager.h  FItem.h  FObject.h  FPlayer.h  FScene.h  FSceneManager.cpp  FSceneManager.h  FShader.h  FStruct.h  FTestWorld.h  enums.h  utils.h
resources/shaders/: bloom.fs  damage.fs  sandColor.fs  wave.fs
src/: FAmmo.cpp  FAnimation.cpp  FAnimationClip.cpp  FCamera.cpp  FCanvas.cpp  FGame.cpp  FGrid.cpp  FGun.cpp  FInputManager.cpp  FItem.cpp  FMainMenu.cpp  FObject.cpp  FPlayer.cpp  FScene.cpp  FSceneManager.cpp  FShader.cpp  FTestWorld.cpp  FUI.cpp  main.c  main.cpp  utils.cpp
